# hpm_sdk_extra_apps

components/enet_phy/: CMakeLists.txt  hpm_enet_phy_common.h
components/enet_phy/jl2101/: CMakeLists.txt  hpm_jl2101.c  hpm_jl2101.h  hpm_jl2101_regs.h
middleware/tinyusb/src/portable/hpm/: dcd_hpm.c
samples/dma_uart_tx_circle_transfer/: CMakeLists.txt
samples/dma_uart_tx_circle_transfer/src/: dma_uart_circle_tx.c
samples/sei_master_tamagawa_x4/: README_zh.md
samples/sei_master_tamagawa_x4/src/: sei_x4.c
samples/tamagawa_x4/: CMakeLists.txt
